--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "holosophos"
-version = "0.1.0"
+version = "0.3.0"
 description = "Holosophos Project"
 requires-python = ">=3.12"
 dependencies = [
@@ -13,28 +13,18 @@ dependencies = [
     "xmltodict>=0.14.0",
     "pyyaml>=5.3.1",
     "types-pyyaml>=5.3.1",
-    "transformers==4.47.1",
-    "smolagents[telemetry]==1.17.0",
     "docker>=7.1.0",
-    "litellm==1.60.8",
-    "beautifulsoup4>=4.12.0",
-    "types-beautifulsoup4>=4.12.0",
     "fire>=0.7.0",
     "tqdm>=4.66.0",
     "types-tqdm>=4.66.0",
     "arize-phoenix-otel>=0.8.0",
-    "vastai-sdk==0.1.16",
-    "duckduckgo_search==7.5.1",
-    "markdown==3.7.0",
-    "types-markdown==3.7.0.20250322",
     "gradio==5.29.0",
-    "black==25.1.0",
-    "mypy==1.16.0",
-    "flake8==7.2.0",
     "types-xmltodict>=0.14.0.20241009",
     "pytest>=8.4.1",
-    "academia-mcp==0.0.7",
-    "mle-kit-mcp==0.0.1",
+    "pytest-asyncio>=1.0.0",
+    "academia-mcp==0.0.11",
+    "mle-kit-mcp==0.0.4",
+    "codearkt==0.0.14",
 ]
 
 [tool.flake8]
@@ -63,3 +53,7 @@ include-package-data = false
 [[tool.mypy.overrides]]
 module = "pydantic.*"
 follow_imports = "skip"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_test_loop_scope = "function"
